将缓存服务分离
