# docs/swagger.yaml
@@ -1,4 +1,87 @@
 definitions:
+  model.L21:
+    properties:
+      id:
+        type: string
+      修建年度:
+        type: string
+      养护里程:
+        type: string
+      可绿化里程:
+        type: string
+      国道调整前路线编号:
+        type: string
+      地貌代码:
+        type: string
+      地貌汉字:
+        type: string
+      备注:
+        type: string
+      已绿化里程:
+        type: string
+      所在行政区划代码:
+        type: string
+      技术等级:
+        type: string
+      技术等级代码:
+        type: string
+      改建年度:
+        type: string
+      断链类型:
+        type: string
+      是否一幅高速:
+        type: string
+      是否城管路段:
+        type: string
+      是否按干线公路管理接养:
+        type: string
+      是否断头路段:
+        type: string
+      最近一次修复养护年度:
+        type: string
+      止点名称:
+        type: string
+      止点桩号:
+        type: string
+      涵洞数量(个):
+        type: string
+      省际出入口:
+        type: string
+      管养单位名称:
+        type: string
+      设计时速(公里/小时):
+        type: string
+      起点名称:
+        type: string
+      起点桩号:
+        type: string
+      路基宽度(米):
+        type: string
+      路段收费性质:
+        type: string
+      路线名称:
+        type: string
+      路线编号:
+        type: string
+      路面宽度(米):
+        type: string
+      车道数量(个):
+        type: string
+      里程(公里):
+        type: string
+      重复路段线路编号:
+        type: string
+      重复路段终点桩号:
+        type: string
+      重复路段起点桩号:
+        type: string
+      面层厚度(厘米):
+        type: string
+      面层类型:
+        type: string
+      面层类型代码:
+        type: string
+    type: object
   model.ParamLogin:
     properties:
       password:
@@ -31,17 +114,65 @@ definitions:
       msg:
         type: object
     type: object
+  v2.IServerResp:
+    type: object
 info:
   contact: {}
   description: 交通一张图
   title: 交通一张图后端系统
   version: 1.0.0
 paths:
-  /api/v1/cache/hit/{infotype}/{level}:
+  /api/v1/cache/hit/{infotype}/{year}/{level}:
     get:
       consumes:
       - application/json
       description: 检查缓存中是否有请求的值 有就返回没有将请求转发
+      parameters:
+      - description: Bearer 用户令牌
+        in: header
+        name: Authorization
+        type: string
+      - description: 查询类型
+        in: path
+        name: infotype
+        required: true
+        type: string
+      - description: '查询年份 格式: 202X '
+        in: path
+        name: year
+        required: true
+        type: string
+      - description: 查询等级
+        in: path
+        name: level
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/respcode.ResponseData'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  type: string
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 检查缓存命中接口
+      tags:
+      - 缓存相关接口
+  /api/v1/data/info/{infotype}/{year}/{level}:
+    get:
+      consumes:
+      - application/json
+      description: 获取数据库原始数据接口 访问后会更新缓存
       parameters:
       - description: Bearer 用户令牌
         in: header
@@ -52,6 +183,58 @@ paths:
           toll(收费站)'
         in: path
         name: infotype
+        required: true
+        type: string
+      - description: '查询年份 格式: 202X '
+        in: path
+        name: year
+        required: true
+        type: string
+      - description: '查询等级 : 0(高速) 1(一级) 2(二级) 3(三级) 4(四级) 5(等外)'
+        in: path
+        name: level
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/respcode.ResponseData'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  type: string
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 更新缓存接口
+      tags:
+      - 数据操作api
+    post:
+      consumes:
+      - application/json
+      description: 没完成 别调用!!! 获取数据库原始数据接口 访问后会更新缓存
+      parameters:
+      - description: Bearer 用户令牌
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: '查询类型 : road(路)  bridge(桥) tunnel(隧道) service(服务区) portal(收费门架)
+          toll(收费站)'
+        in: path
+        name: infotype
+        required: true
+        type: string
+      - description: '查询年份 格式: 202X '
+        in: path
+        name: year
         required: true
         type: string
       - description: '查询等级 : 0(高速) 1(一级) 2(二级) 3(三级) 4(四级) 5(等外)'
@@ -75,9 +258,93 @@ paths:
               type: object
       security:
       - ApiKeyAuth: []
-      summary: 检查缓存命中接口
+      summary: 修改指定数据
       tags:
-      - 缓存相关接口
+      - 数据操作api
+  /api/v1/data/info/{infotype}/{year}/{level}/query:
+    post:
+      consumes:
+      - application/json
+      description: 获取数据库原始数据接口 访问后会更新缓存
+      parameters:
+      - description: Bearer 用户令牌
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: '查询类型 : road(路)  bridge(桥) tunnel(隧道) service(服务区) portal(收费门架)
+          toll(收费站)'
+        in: path
+        name: infotype
+        required: true
+        type: string
+      - description: '查询年份 格式: 202X '
+        in: path
+        name: year
+        required: true
+        type: string
+      - description: '查询等级 : 0(高速) 1(一级) 2(二级) 3(三级) 4(四级) 5(等外)'
+        in: path
+        name: level
+        required: true
+        type: integer
+      - description: 道路信息（示例）
+        in: body
+        name: 查询信息
+        required: true
+        schema:
+          $ref: '#/definitions/model.L21'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/respcode.ResponseData'
+            - properties:
+                code:
+                  type: integer
+                data:
+                  type: string
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 获取查询数据
+      tags:
+      - 数据操作api
+  /api/v1/data/menus:
+    get:
+      consumes:
+      - application/json
+      description: 用于前端渲染数据管理侧边栏
+      parameters:
+      - description: Bearer 用户令牌
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/respcode.ResponseData'
+            - properties:
+                data:
+                  type: string
+                msg:
+                  type: string
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 获取数据导航栏
+      tags:
+      - 用户相关接口
   /api/v1/home/menus:
     get:
       consumes:
@@ -108,47 +375,6 @@ paths:
       summary: 获取导航栏数据
       tags:
       - 用户相关接口
-  /api/v1/info/{infotype}/{level}:
-    get:
-      consumes:
-      - application/json
-      description: 获取数据库原始数据接口 访问后会更新缓存
-      parameters:
-      - description: Bearer 用户令牌
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: '查询类型 : road(路)  bridge(桥) tunnel(隧道) service(服务区) portal(收费门架)
-          toll(收费站)'
-        in: path
-        name: infotype
-        required: true
-        type: string
-      - description: '查询等级 : 0(高速) 1(一级) 2(二级) 3(三级) 4(四级) 5(等外)'
-        in: path
-        name: level
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/respcode.ResponseData'
-            - properties:
-                data:
-                  type: string
-                msg:
-                  type: string
-              type: object
-      security:
-      - ApiKeyAuth: []
-      summary: 更新缓存接口
-      tags:
-      - 缓存相关接口
   /api/v1/login:
     post:
       consumes:
@@ -170,6 +396,8 @@ paths:
             allOf:
             - $ref: '#/definitions/respcode.ResponseData'
             - properties:
+                code:
+                  type: integer
                 data:
                   type: string
                 msg:
@@ -179,7 +407,7 @@ paths:
       - ApiKeyAuth: []
       summary: 处理登录请求
       tags:
-      - 用户相关api
+      - 登陆api
   /api/v1/sigin:
     post:
       consumes:
@@ -201,6 +429,8 @@ paths:
             allOf:
             - $ref: '#/definitions/respcode.ResponseData'
             - properties:
+                code:
+                  type: integer
                 data:
                   type: string
                 msg:
@@ -210,5 +440,28 @@ paths:
       - ApiKeyAuth: []
       summary: 处理注册请求
       tags:
-      - 用户相关api
+      - 注册api
+  /api/v2/iserver/services/data-vector/rest/data:
+    post:
+      consumes:
+      - application/json
+      description: 用于转发IServer数据，并做权限检验
+      parameters:
+      - description: Bearer 用户令牌
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/v2.IServerResp'
+      security:
+      - ApiKeyAuth: []
+      summary: 获取IServer数据接口
+      tags:
+      - IServer相关api
 swagger: "2.0"
